--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -1,17 +1,21 @@
 header {
-    padding: 20px 25px;
+    padding: 15px 5% 0;
 
     .main__nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        
+        .logo {
+            color: #50717b;
+        }
 
         .nav__links {
             display: flex;
             justify-content: center;
             align-items: center;
-
+            
             ul {
                 display: flex;
                 justify-content: space-between;
@@ -21,11 +25,22 @@ header {
                     margin: 0 15px;
                     a{
                         text-decoration: none;
+                        color: #50717b;
                     }
-
                 }
-
             }
+
+        }
+        button {
+            background:none;
+            color: #6daecc;
+            border: 2px solid #6daecc;
+            border-radius: 5px;
+            padding: 5px 15px;
+            
+        }
+        button:hover {
+            cursor: pointer;
         }
     }
 
