--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -1,14 +1,17 @@
 header {
-    padding: 15px 5% 0;
-
+    
     .main__nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 100%;
         
-        .logo {
-            color: #50717b;
+        .logo__container{
+
+            .logo {
+                font-size: 36px;
+                font-weight: 400;
+            }
         }
 
         .nav__links {
@@ -20,12 +23,14 @@ header {
                 display: flex;
                 justify-content: space-between;
                 list-style: none;
+                padding: 0;
+                margin: 0;
 
                 li {
-                    margin: 0 15px;
+                    margin: 0 40px;
                     a{
                         text-decoration: none;
-                        color: #50717b;
+                        color: #fff;
                     }
                 }
             }
@@ -33,10 +38,12 @@ header {
         }
         button {
             background:none;
-            color: #6daecc;
-            border: 2px solid #6daecc;
+            color: #fff;
+            border: 2px solid #fff;
             border-radius: 5px;
             padding: 5px 15px;
+            font-family:  'Source Sans Pro', sans-serif;
+            font-size: 16px;
             
         }
         button:hover {
