--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 html {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
-}
+
 
 body {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:  'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  color: #fff;
 }
 
 code {
