added some wabes at the bottom of hero section

--- a/src/hero/social-contact/social.scss
+++ b/src/hero/social-contact/social.scss
@@ -1,4 +1,8 @@
-.social__main a{
-    text-decoration: none;
-    color: #fff;
+.social__main {
+    
+    align-self: center;
+    a {
+        text-decoration: none;
+        color: #fff;
+    }
 }
