--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 .App {
+    position: relative;
     height: 100vh;
     
     .hero__section {
         background-color: #50717b;
-        padding: 30px 5% 0;
-        height: 80%;
+        padding: 30px 5% 0px;
     }
+
 }
