--- a/src/hero/hero-about/heroabout.scss
+++ b/src/hero/hero-about/heroabout.scss
@@ -2,20 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: auto;
+    margin-bottom: 200px;
     
-    // .profile__image {
-    //     width: 150px;
-    //     height:150px;
-    //     overflow: hidden;
-    //     border-radius: 50%;
-    //     border: 2px solid #3a4042;
-        
-    //     img {
-    //         width: 150px;
-    //     }
-    // }
-
     h1 {
         font-size: 3rem;
     }
